Setting java options for samza container