@@ -6,7 +6,16 @@ import sbtdocker.Plugin.DockerKeys.docker
 
 object Samza {
   val settings = Docker.settings ++ Seq(
-    javaOptions in docker ~= { _.filterNot(opt => opt.contains("Xms") || opt.contains("Xmx")) },
+    javaOptions in docker := Seq(
+      "-server",
+      "-XX:+HeapDumpOnOutOfMemoryError",
+      "-XX:+UseConcMarkSweepGC",
+      "-XX:+CMSClassUnloadingEnabled",
+      "-XX:+UseCompressedOops",
+      "-XX:MaxPermSize=128M",
+      "$JAVA_OPTS",
+      "$SAMZA_CONTAINER_ENV_JAVA_OPTS"
+    ),
     mainClass in Compile := Some("com.banno.samza.Main"),
     baseImage in docker := "banno/samza-mesos:0.21.1",
     //Mesos native lib binds to LIBPROCESS_IP so the Mesos master can communicate with the Mesos framework, so it needs to be an IP accessible by Mesos master (not 127.0.0.1)
